tests/errors/incomplete_query.mpl
dataset:metric | align to 5m using

